fixed spacing on sections

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -26,3 +26,7 @@ body {
 .contact-form {
     padding-top: 40px;
 }
+
+.spacer {
+    height:75px;
+}
